# text-gnn-experiments-thesis

./: .gitignore  EDA.ipynb  MEMORY_FIX_SUMMARY.md  MEMORY_OPTIMIZATION.md  README.md  TODO.md  bi_lstm.ipynb  bi_lstm.py  build_graph.py  check_runs.py  compare_texting.py  config_class.py  dataset.py  debug_model_init.py  delete_lstm_runs.py  delete_new_texting.py  delete_runs.py  downloadData.py  eval.py  experiment_log_20260319_224326.txt  experiment_log_20260321_225349.txt  experiment_log_20260321_225704.txt  experiment_log_20260322_125716.txt  experiment_log_20260322_125735.txt  experiment_log_20260322_125846.txt  experiment_log_20260322_160555.txt  experiment_log_20260322_172006.txt  experiment_log_20260322_173030.txt  experiment_log_20260322_173116.txt  experiment_log_20260322_191125.txt  experiment_log_20260322_213047.txt  experiment_log_20260322_235221.txt  experiment_log_20260322_235228.txt  experiment_log_20260323_095549.txt  experiment_log_20260323_095706.txt  experiment_log_20260323_095754.txt  experiment_log_20260323_103833.txt  experiment_log_20260323_134125.txt  experiment_log_20260324_105610.txt  experiment_log_20260324_105619.txt  (+33 more)
loaders/: GNNsLoader.py  build_graph.py  create_basic_dataset.py  lstmLoader.py  tempLoader.py  text_gcn_loader.py
mlruns/0/: meta.yaml
mlruns/136145563121142593/: meta.yaml
mlruns/136193665356926054/: meta.yaml
mlruns/150117082895920687/: meta.yaml
mlruns/173705505568586777/: meta.yaml
mlruns/192532029258995296/: meta.yaml
mlruns/198192892419210213/: meta.yaml
mlruns/220158023000307864/: meta.yaml
mlruns/222697280922256919/: meta.yaml
mlruns/272304524175686087/: meta.yaml
mlruns/279259385073386857/: meta.yaml
mlruns/295559181721281410/: meta.yaml
models/: base_text_classifier.py  mlp.py  text_gnn.py
notebooks/: bi_lstm.ipynb  idk.ipynb
runConfigs/: gcn2_ng20.json  gcn3_ng20.json  gcn4_ng20.json  gcn5_ng20.json  gcn6_ng20.json  gcn7_ng20.json  runConfigExample.json  test.json  testGCN.json  testGCN_low_memory.json  testGat.json  testTextING.json
tests/: gnnTests.py
(+29195 files in other folders)
