[project]
name = "experiments"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "matplotlib>=3.10.6",
    "mlflow==3.1.1",
    "nltk>=3.9.1",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
]

[dependency-groups]
dev = [
    "line-profiler>=5.0.0",
    "memory-profiler>=0.61.0",
    "pytest>=8.4.1",
]
