[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "textgnn"
version = "0.1.0"
description = "Experimental text classification framework (LSTM, FastText, GNNs)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.0.0",
    "ipykernel>=6.30.1",
    "jupyter-client>=8.6.3",
    "jupyter-core>=5.8.1",
    "klepto>=0.2.5",
    "matplotlib>=3.10.6",
    "mlflow==3.1.1",
    "nltk>=3.9.1",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "torch==2.3.0",
    "torch-geometric>=2.7.0",
]

[dependency-groups]
dev = [
    "line-profiler>=5.0.0",
    "memory-profiler>=0.61.0",
    "pytest>=8.4.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/textgnn"]
[tool.uv.extra-build-dependencies]
torch-scatter = ["torch"]
